# inventory-sqlite

./: CMakeLists.txt  README.md  inventarios.cpp
